--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -192,6 +192,7 @@ section.post .postDate {
     padding-left: 11px;
     padding-right: 11px;
     border-radius: 8px;
+    font-size: 0.9rem;
 }
 
 section.footer {
