improve card image quality

--- a/src/components/PostPreview.astro
+++ b/src/components/PostPreview.astro
@@ -17,7 +17,7 @@ const formattedPublishDate = new Date(data.pubDate).toLocaleDateString(
     src={data.postImage.src}
     alt={data.postImage.alt}
     width="300"
-    quality="med"
+    quality="high"
   />
   <a href={url}><h3>{data.title}</h3></a>
   <p>{formattedPublishDate}</p>
