--- a/src/styles/maps.css
+++ b/src/styles/maps.css
@@ -1,42 +1,65 @@
-
-
 .leaflet-container {
-  
- max-width: 100%;
- max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
-  #map {
-    min-height: 500px;
-  }
- 
-  .info {
-   padding: 6px 8px;
-   font:
-    14px/16px Arial,
-    Helvetica,
-    sans-serif;
-   background: white;
-   background: rgba(255, 255, 255, 0.8);
-   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-   border-radius: 5px;
-  }
- 
-  .info h4 {
-   margin: 0 0 5px;
-   color: #777;
-  }
- 
-  .legend {
-   text-align: left;
-   line-height: 18px;
-   color: #555;
-  }
- 
-  .legend i {
-   width: 18px;
-   height: 18px;
-   float: left;
-   margin-right: 8px;
-   opacity: 0.7;
-  }
+#map {
+  min-height: 500px;
+}
+
+#TGFmap {
+  min-height: 575px;
+}
+
+p.tgfMapLegend {
+  margin-bottom: 0px;
+}
+
+.info {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: white;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+}
+
+.info h4 {
+  margin: 0 0 5px;
+  color: #777;
+}
+
+.legend {
+  text-align: left;
+  line-height: 18px;
+  color: #555;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+.circle {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  border-radius: 50%;
+  border-style: solid;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.circle.circle1 {
+  background: rgba(255, 176, 18, 0.621);
+  border-color: #f5970b;
+  color: white;
+}
+
+.my-control {
+  background: #fff;
+  padding: 5px;
+}
