--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,7 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import LatestPosts from '../components/LatestPosts.astro';
 import SocialLinks from '../components/SocialLinks.astro';
-import { Image } from 'astro:assets';
-import Selfie from '/src/content/page_images/jcc-selfie.jpg';
+import Selfie from '../components/Selfie.astro';
 
 const pageMeta = {
   title: 'Hello Stu | Home',
@@ -18,10 +17,7 @@ const pageMeta = {
     <div class="content-padding">
       <div class="welcome-grid">
         <div class="profile-pic">
-          <figure>
-            <Image src={Selfie} alt="Stuart Mackenzie profile picture" />
-            <figcaption>Stuart Mackenzie</figcaption>
-          </figure>
+          <Selfie />
         </div>
         <div class="welcome-text">
           <p>
