update home link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,10 +21,10 @@ const pageMeta = {
         </div>
         <div class="welcome-text">
           <p>
-            Hello, I'm <a href="#">Stuart Mackenzie</a>. I spend most of my days
-            working hard to improve and transform public services as a Senior
-            Partner at <a href="https://tpximpact.com">TPXimpact</a>. Outside of
-            work I'm known for being a <a href="/tags/photography"
+            Hello, I'm <a href="/about">Stuart Mackenzie</a>. I spend most of my
+            days working hard to improve and transform public services as a
+            Senior Partner at <a href="https://tpximpact.com">TPXimpact</a>.
+            Outside of work I'm known for being a <a href="/tags/photography"
               >photography nerd</a
             >, <a href="/podcasts">occassional podcaster</a>, <a
               href="/tags/tech">amatuer web developer</a
