--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,31 +13,37 @@ import { Icon } from 'astro-icon/components';
     <a
       href="https://uk.linkedin.com/in/stuartjmackenzie/"
       class="social-icon"
+      rel="me"
       aria-label="link to linked.in profile"><Icon name="linkedin" /></a
     >
     <a
       href="https://www.strava.com/athletes/1170885/"
       class="social-icon"
+      rel="me"
       aria-label="link to strava profile"><Icon name="strava" /></a
     >
     <a
       href="https://www.threads.net/@_d1sco"
       class="social-icon"
+      rel="me"
       aria-label="link to threads"><Icon name="threads" /></a
     >
     <a
       href="https://github.com/d1sc0/"
       class="social-icon"
+      rel="me"
       aria-label="link to github profile"><Icon name="github" /></a
     >
     <a
       href="https://www.instagram.com/_d1sco/"
       class="social-icon"
+      rel="me"
       aria-label="link to instagram profile"><Icon name="instagram" /></a
     >
     <a
       href="https://bsky.app/profile/hellostu.xyz"
       class="social-icon"
+      rel="me"
       aria-label="link to bluesky profile"><Icon name="bluesky" /></a
     >
   </section>
