--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -11,22 +11,24 @@
       arrange a coffee IRL! :)
       <ul>
         <li>
-          <a href="https://uk.linkedin.com/in/stuartjmackenzie/">Linked.In</a>
+          <a href="https://uk.linkedin.com/in/stuartjmackenzie/" rel="me"
+            >Linked.In</a
+          >
         </li>
         <li>
-          <a href="https://www.threads.net/@_d1sco">Threads</a>
+          <a href="https://www.threads.net/@_d1sco" rel="me">Threads</a>
         </li>
         <li>
-          <a href="https://www.strava.com/athletes/1170885/">Strava</a>
+          <a href="https://www.strava.com/athletes/1170885/" rel="me">Strava</a>
         </li>
         <li>
-          <a href="https://github.com/d1sc0/">Github</a>
+          <a href="https://github.com/d1sc0/" rel="me">Github</a>
         </li>
         <li>
-          <a href="https://www.instagram.com/_d1sco/">Instagram</a>
+          <a href="https://www.instagram.com/_d1sco/" rel="me">Instagram</a>
         </li>
         <li>
-          <a href="https://bsky.app/profile/hellostu.xyz">Bluesky</a>
+          <a href="https://bsky.app/profile/hellostu.xyz" rel="me">Bluesky</a>
         </li>
       </ul>
     </p>
