--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -8,6 +8,8 @@ const siteURL = 'https://hellostu.xyz';
 <head>
   <meta charset="utf-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+  <link rel="webmention" href="https://webmention.io/hellostu.xyz/webmention" />
+  <link rel="pingback" href="https://webmention.io/hellostu.xyz/xmlrpc" />
   <meta name="viewport" content="width=device-width" />
   <meta name="generator" content={Astro.generator} />
   <Fonts />
