adding h-entry tags

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@
 <header id="top">
   <nav class="main-nav" role="navigation">
     <div class="brand">
-      <h1 class="site-title"><a href="/">Hello Stu</a></h1>
+      <h1 class="site-title"><a href="/" rel="author">Hello Stu</a></h1>
     </div>
 
     <div class="burger">
