--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -25,6 +25,7 @@ const { Content } = await entry.render();
 
 <MarkdownPostLayout
   frontmatter={entry.data}
+  slug={entry.slug}
   prevPost={prevPost}
   nextPost={nextPost}
 >
