--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from './BaseLayout.astro';
+const siteURL = 'https://hellostu.xyz';
 const { frontmatter, prevPost, nextPost, slug } = Astro.props;
 
 const dateOptions: object = {
@@ -20,17 +21,23 @@ const formattedPublishDate = new Date(frontmatter.pubDate).toLocaleDateString(
       {
         frontmatter.tags.map(tag => (
           <span class="tag">
-            <a href={`/tags/${tag}`}>{tag}</a>
+            <a href={`/tags/${tag}`} class="p-category">
+              {tag}
+            </a>
           </span>
         ))
       }
     </div>
-    <p class="postDate dt-published">
+    <p class="postDate">
       Published: {formattedPublishDate}
     </p>
     <p class="e-content">
       <slot />
     </p>
-    <a href={slug} class="u-url" style="display: none;">permalink</a>
+    <p style="display: none;">
+      <a href={slug} class="u-url dt-published">{frontmatter.pubDate}</a>
+      <a href={siteURL} class="p-author h-card" rel="author">Stuart Mackenzie</a
+      >
+    </p>
   </section>
 </BaseLayout>
