--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -8,10 +8,13 @@ const dateOptions: object = {
   month: 'long',
   day: 'numeric',
 };
+
 const formattedPublishDate = new Date(frontmatter.pubDate).toLocaleDateString(
   'en-UK',
   dateOptions
 );
+
+const isoDate = new Date(frontmatter.pubDate).toISOString();
 ---
 
 <BaseLayout frontmatter={frontmatter} prevPost={prevPost} nextPost={nextPost}>
@@ -35,7 +38,7 @@ const formattedPublishDate = new Date(frontmatter.pubDate).toLocaleDateString(
       <slot />
     </p>
     <p style="display: none;">
-      <a href={slug} class="u-url dt-published">{frontmatter.pubDate}</a>
+      <a href={slug} class="u-url dt-published">{isoDate}</a>
       <a href={siteURL} class="p-author h-card" rel="author">Stuart Mackenzie</a
       >
     </p>
