--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -44,7 +44,7 @@ const isoDate = new Date(frontmatter.pubDate).toISOString();
       >
     </p>
     <p>&nbsp;</p>
-    <h2>Comments</h2>
+    <h2>Comment</h2>
     <JamComments />
   </section>
 </BaseLayout>
