--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,9 +18,10 @@ import ProfilePic from '/src/assets/page_images/stuart-mackenzie.jpg';
         alt="Stuart Mackenzie profile picture"
         class="imageRight"
       />
-      I live in <a href="https://www.visit-dorset.com/">Dorset</a> along with my
-      wife Chloe and daughter Robyn. I spend much of my time transforming public
-      services as a Senior Partner at{' '}
+      Hello I'm Stuart and I live in <a href="https://www.visit-dorset.com/"
+        >Dorchester, Dorset</a
+      >. I spend much of my time transforming public services as a Senior
+      Partner at{' '}
       <a href="https://tpximpact.com">TPXimpact</a> (previously known as{' '}
       <a href="https://wearefuturegov.com">FutureGov</a>).
     </p>
