--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,7 +39,8 @@
       <ul>
         <li><a href="/about">About</a></li>
         <li><a href="/posts">Posts</a></li>
-        <li><a href="/podcasts">Audio Notes</a></li>
+        <!-- <li><a href="/podcasts">Audio Notes</a></li> -->
+        <li><a href="https://photos.hellostu.xyz">Photos</a></li>
         <li><a href="/tags">Tags</a></li>
         <li><a href="/rss.xml">RSS</a></li>
       </ul>
