--- a/src/components/Selfie.astro
+++ b/src/components/Selfie.astro
@@ -1,12 +1,14 @@
 ---
 import { Image } from 'astro:assets';
-import img1 from '/src/assets/page_images/jcc-selfie.jpg';
-import img2 from '/src/assets/page_images/jcc-selfie2.jpg';
-import img3 from '/src/assets/page_images/jcc-selfie3.jpg';
-import img4 from '/src/assets/page_images/jcc-selfie4.jpg';
-import img5 from '/src/assets/page_images/jcc-selfie5.jpg';
-import img6 from '/src/assets/page_images/jcc-selfie6.jpg';
-const arr = [img1, img2, img3, img4, img5, img6];
+import img1 from '/src/assets/page_images/selfie.jpg';
+import img2 from '/src/assets/page_images/selfie2.jpg';
+import img3 from '/src/assets/page_images/selfie3.jpg';
+import img4 from '/src/assets/page_images/selfie4.jpg';
+import img5 from '/src/assets/page_images/selfie5.jpg';
+import img6 from '/src/assets/page_images/selfie6.jpg';
+import img7 from '/src/assets/page_images/selfie7.jpg';
+import img8 from '/src/assets/page_images/selfie8.jpg';
+const arr = [img1, img2, img3, img4, img5, img6, img7, img8];
 const RandomSelfie = arr[Math.floor(Math.random() * arr.length)];
 ---
 
