--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -683,15 +683,10 @@ button.jc-Comment-actionButton {
 
 div.jc-Comment-actions:before,
 span.jc-CommentList-count:after,
-div.jc-Comment-actions {
+.jc-CommentList-count:after div.jc-Comment-actions {
   display: none;
 }
-
-.jc-CommentBox textarea {
-  font: inherit;
-}
-
-ul.jc-Comment-actionList {
+.jc-CommentList-count:after ul.jc-Comment-actionList {
   margin-left: 0rem;
 }
 
