fix style issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -683,11 +683,16 @@ button.jc-Comment-actionButton {
 
 div.jc-Comment-actions:before,
 span.jc-CommentList-count:after,
-.jc-CommentList-count:after div.jc-Comment-actions {
+.jc-CommentList-count:after,
+div.jc-Comment-actions {
   display: none;
 }
 .jc-CommentList-count:after ul.jc-Comment-actionList {
   margin-left: 0rem;
+}
+
+.jc-CommentList-count:after {
+  display: none !important;
 }
 
 div.jc-CommentList {
