updating site pics

--- a/src/components/Selfie.astro
+++ b/src/components/Selfie.astro
@@ -1,14 +1,31 @@
 ---
 import { Image } from 'astro:assets';
-import img1 from '/src/assets/page_images/selfie.jpg';
-import img2 from '/src/assets/page_images/selfie2.jpg';
-import img3 from '/src/assets/page_images/selfie3.jpg';
-import img4 from '/src/assets/page_images/selfie4.jpg';
-import img5 from '/src/assets/page_images/selfie5.jpg';
-import img6 from '/src/assets/page_images/selfie6.jpg';
-import img7 from '/src/assets/page_images/selfie7.jpg';
-import img8 from '/src/assets/page_images/selfie8.jpg';
-const arr = [img1, img2, img3, img4, img5, img6, img7, img8];
+import img1 from '/src/assets/page_images/selfie-01.jpg';
+import img2 from '/src/assets/page_images/selfie-02.jpg';
+import img3 from '/src/assets/page_images/selfie-03.jpg';
+import img4 from '/src/assets/page_images/selfie-04.jpg';
+import img5 from '/src/assets/page_images/selfie-05.jpg';
+import img6 from '/src/assets/page_images/selfie-06.jpg';
+import img7 from '/src/assets/page_images/selfie-07.jpg';
+import img8 from '/src/assets/page_images/selfie-08.jpg';
+import img9 from '/src/assets/page_images/selfie-09.jpg';
+import img10 from '/src/assets/page_images/selfie-11.jpg';
+import img11 from '/src/assets/page_images/selfie-12.jpg';
+import img12 from '/src/assets/page_images/selfie-03.jpg';
+const arr = [
+  img1,
+  img2,
+  img3,
+  img4,
+  img5,
+  img6,
+  img7,
+  img8,
+  img9,
+  img10,
+  img11,
+  img12,
+];
 const RandomSelfie = arr[Math.floor(Math.random() * arr.length)];
 ---
 
